--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DECTYPE html>
 <html>
   <head>
-    <meta>charset='UTF-8'</meta>
+    <meta>charset='UTF-8 ' />
   <title>图片</title>
   </head>
 <body>
@@ -11,7 +11,7 @@
   }
   </style>
   <p>添加图片练习</p>
-  <img src='images/small2.jpg' style='width:50px;height:40px;' />
+  <img src='images/small3.jpg' style='width:50px;height:40px;' />
 </body>
 </html>
     
