--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DECTYPE html>
 <html>
   <head>
-    <meta>charset='UTF-8 ' />
-  <title>图片</title>
-  </head>
+    <meta>charset="UTF-8" />
+    <title>图片</title>
+    </head>
 <body>
   <style>
     p {
