--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   }
   </style>
   <p>添加图片练习</p>
-  <img src='images/small3.jpg' style='width:50px;height:40px;' />
+  <img src='images/main.jpg' style='width:50px;height:40px;' />
 </body>
 </html>
     
