--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 <body>
   <style>
     p {
-  font-size:500px
+  font-size:500px;
   }
   </style>
   <p>添加图片练习</p>
-  <img src="images/main.jpg" style="width:450px;height:640px;">
+  <img src="images/main.jpg" style="width:450px:height:640px;"/>
 </body>
 </html>
     
