--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8"/>
-    <title>图片</title>
+    <title>暑假作业</title>
     </head>
 <body>
   <style>
@@ -10,8 +10,10 @@
   font-size:45px;
   }
   </style>
-  <p>添加图片练习</p>
-  <img src="images/main.jpg" style="width:450px:height:640px;"/>
+  <p>暑假写的作业</p>
+  <img src="images/420483C5-8F77-4D0B-96BB-0E684E610ECD.jpeg
+
+" style="width:450px:height:640px;"/>
 </body>
 </html>
     
